Bug 544523 - [12]Switch Expressions - nested - compilation error